[package]
name = "ulvenstein"
version = "0.1.0"
edition = "2021"
description = "A WASM implementation of the famous Wolfenstein3d renderer"
repository = "https://github.com/ericwoude/ulvenstein"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
